@@ -20,12 +20,6 @@
 -->
 <chummer>
   <version>0</version>
-  <categories>
-    <category>Metahuman</category>
-    <category>Metavariant</category>
-    <category>Metasapient</category>
-    <category xpathfilter="text() = 'Shapeshifter'">Shapeshifter</category>
-  </categories>
   <metatypes>
     <!-- Region Metahuman -->
     <metatype>
