@@ -19,6 +19,7 @@ Data Changes:
 - Fixed an issue with the Private Investigator life module that prevented it from being added.
 - Removed Ratings from Cosmetic Surgery, replaced with variable cost.
 - Added RatingLabel to Fiberoptic Hair and Telescoping Limbs. 
+- Fixed an issue with the Point Priority Chargen customdata file causing metahumans to be unavailable.
 
 New Strings:
 - Label_MetagenicKarmaValue
